@@ -174,6 +174,8 @@ Optimizations
 
 * GITHUB#14272: Use DocIdSetIterator#range for continuous-id BKD leaves. (Guo Feng)
 
+* GITHUB#14338: Deduplicate BKDConfig records in BKDReader. (Ignacio Vera)
+
 Bug Fixes
 ---------------------
 
